Automatically backed up by Learn

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
 
 /* link the web font used for the level 1 heading here */
 
+@font-face {
+  font-family: 'Baskerville';
+  src: url(../fonts/Baskerville.ttc);
+}
+
 /*////////// Global Styles //////////*/
 
 body {
@@ -17,4 +22,10 @@ body {
 	padding: 0 45px 20px;
 }
 
+
 /* Write all remaining styles here */
+h1 {
+  font-family: 'Baskerville', serif;
+  padding-bottom: 10px;
+  border-bottom: 1px solid rgb(147, 174, 166);
+}
