--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ h1 {
   font-family: 'Baskerville', serif;
   padding-bottom: 10px;
   border-bottom: 1px solid rgb(147, 174, 166);
-  font-size: ;
+  font-size: 10em;
 }
 h2 {
   
