--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ h1 {
   padding-bottom: 10px;
   border-bottom: 1px solid rgb(147, 174, 166);
   font-size: 5em;
-  font-weight: bold;
+  font-weight: ;
 }
 h2 {
   
