--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
 h1 {
   font-family: 'Baskerville', serif;
   padding-bottom: 10px;
-  border-bottom: 1px solid rgb(204, 204, 204);
+  border-bottom: 1px solid #ccc;
   font-size: 5em;
   font-weight: normal;
   
