--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ h2 {
   font-family: 'Baskerville';
   font-size: 2em;
   font-weight: normal;
-  color: rgb(147, 174, 166);
+  color: rgb(111,127,122);
 }
 p {
   font-size: 1em;
