--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
 
 /* link the web font used for the level 1 heading here */
 
+@font-face {
+  font-family: 'Baskerville';
+  src: url(../fonts/Baskerville.ttc);
+}
+
 /*////////// Global Styles //////////*/
 
 body {
@@ -17,4 +22,64 @@ body {
 	padding: 0 45px 20px;
 }
 
+
+
 /* Write all remaining styles here */
+h1 {
+  font-family: 'Baskerville', serif;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #ccc;
+  font-size: 5em;
+  font-weight: normal;
+  margin: 0 0 5px;
+  
+}
+h2 {
+  font-family: 'Baskerville';
+  font-size: 2em;
+  font-weight: normal;
+  color: rgb(111,127,122);
+}
+p {
+  font-size: 1em;
+  color: #555;
+  margin: 10px 0px 20px;
+}
+.small {
+  font-size: .75em;
+}
+
+
+header a{
+  color: rgb(147, 174, 166);
+  text-decoration: none;
+}
+header a:hover {
+  color: rgb(111,127,122);
+}
+#featured img {
+  border: 4px solid #ccc;
+  padding: 1px;
+}
+#featured a {
+  color: #1783bb;
+  text-decoration: none;
+}
+#featured a:hover {
+  text-decoration: underline;
+}
+
+#press {
+  margin-bottom: 20px;
+}
+#press img{
+  border: 5px solid #ccc;
+  padding: 1px;
+}
+#press img:hover {
+  border: 5px rgb(111,127,122) solid;
+}
+footer {
+  text-align: right;
+  color: #fff;
+}
